--- a/client1/src/pages/tickets.css
+++ b/client1/src/pages/tickets.css
@@ -62,3 +62,38 @@
   width: 18rem; 
   margin: 1.4em;
 }
+
+.img-url{
+  padding-top: 1em;
+}
+
+.button-book-now{
+  margin-top: 1em;
+  margin-left: 2.2em;
+  height: 3em;
+  width: 10em;
+  background-color: white;
+  border-color: rgb(0, 140, 255);
+  color:rgb(0, 140, 255);
+}
+
+.button-book-now:hover{
+  margin-top: 1em;
+  height: 3em;
+  width: 10em;
+  color: white;
+  background-color: rgb(0, 140, 255);
+  border-color: rgb(0, 140, 255);
+}
+
+.card-title{
+  padding-bottom: 1em;
+}
+
+.card-text{
+  /* padding-bottom: -0.5em; */
+}
+
+.img-hotel{
+  width: 29em;
+}
