--- a/client1/src/components/payment.css
+++ b/client1/src/components/payment.css
@@ -28,25 +28,21 @@
 	padding: 11px 15px 11px 0;
 }
 
-button {
-	display: block;
-	font-size: 16px;
-	width: calc(100% - 30px);
-	height: 40px;
-	margin: 40px 15px 0;
-	background-color: #f6a4eb;
-	box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08), inset 0 1px 0 #ffb9f6;
-	border-radius: 4px;
-	color: #fff;
-	font-weight: 600;
-	cursor: pointer;
-	transition: all 100ms ease-in-out;
-	will-change: transform, background-color, box-shadow;
-	border: none;
+
+.buttom-payment{
+  margin-top: 3em;
+  height: 3em;
+  width: 10em;
+  background-color: white;
+  border-color: rgb(0, 140, 255);
+  color:rgb(0, 140, 255);
 }
 
-button:active {
-	background-color: #d782d9;
-	box-shadow: 0 6px 9px rgba(50, 50, 93, 0.06), 0 2px 5px rgba(0, 0, 0, 0.08), inset 0 1px 0 #e298d8;
-	transform: scale(0.99);
+.buttom-payment:hover{
+  margin-top: 3em;
+  height: 3em;
+  width: 10em;
+  color: white;
+  background-color: rgb(0, 140, 255);
+  border-color: rgb(0, 140, 255);
 }
