--- a/client1/src/pages/profile.css
+++ b/client1/src/pages/profile.css
@@ -157,6 +157,25 @@
   border-color: rgb(255, 51, 0);
 }
 
+.button-buy-ticket{
+  margin-top: 1em;
+  margin-left: 2em;
+  height: 3em;
+  width: 10em;
+  background-color: white;
+  border-color: rgb(0, 140, 255);
+  color:rgb(0, 140, 255);
+}
+
+.button-buy-ticket:hover{
+  margin-top: 1em;
+  margin-left: 2em;
+  height: 3em;
+  width: 10em;
+  color: white;
+  background-color: rgb(0, 140, 255);
+  border-color: rgb(0, 140, 255);
+}
 
 .button-block3-save{
   margin-top: 3em;
